--- a/style.css
+++ b/style.css
@@ -21,42 +21,46 @@ ul{
 
 .wrapper{
     position: relative;
+    width: 100vw;
+    height: 95vh;
 }
 
-.frame{
-    position: relative;
-    width: 460px;
-    height: 460px;
-    margin: 100px auto 0;
-    border-radius: 50%;
-    border: 35px solid #312e2e;
-    box-shadow: -35px 30px 45px 40px #000000e9;
-    z-index: 100;
-    pointer-events: none;
-}
-
-.second-frame {
+.inner-frame{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 500px;
-    height: 500px;
+    width: 550px;
+    height: 550px;
     border-radius: 50%;
-    border: 30px solid #312e2e;
+    border: 45px solid #312e2e;
+    box-shadow: -45px 35px 50px 40px #000000e9;
+    z-index: 100;
+    pointer-events: none;
+}
+
+.outer-frame {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    height: 600px;
+    border-radius: 50%;
+    border: 40px solid #312e2e;
     box-shadow: inset -2px 2px 10px #000000be, inset 2px -1px 4px #ffffff36;
     z-index: 101;
     pointer-events: none;
 }
 
-.second-frame::after{
+.outer-frame::after{
     position: absolute;
     content: '';
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 443px;
-    height: 443px;
+    width: 522px;
+    height: 522px;
     border-radius: 50%;
     border-top: 3px solid #252423ea;
     border-right: 3px solid #252423ea;
@@ -64,14 +68,14 @@ ul{
     pointer-events: none;
 }
 
-.second-frame::before {
+.outer-frame::before {
     position: absolute;
     content: '';
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 442px;
-    height: 442px;
+    width: 522px;
+    height: 522px;
     border-radius: 50%;
     border-bottom: 2px solid #383434;
     border-left: 2px solid #383434;
@@ -79,13 +83,13 @@ ul{
     pointer-events: none;
 }
 
-.frame-shadow{
+.outer-frame-shadow{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 500px;
-    height: 500px;
+    width: 600px;
+    height: 600px;
     border-radius: 50%;
     border: 5px solid #252222f2;
     border-right-color: #25222275;
@@ -102,11 +106,10 @@ ul{
     transform: translate(-50%, -50%);
     content: '';
     background-color: #312e2e;
-    width: 400px;
-    height: 25px;
+    width: 600px;
+    height: 30px;
     box-shadow:2px -1px 4px #ffffff53;
     z-index: 99;
-    pointer-events: none;
 }
 
 .middle-line::after{
@@ -114,22 +117,24 @@ ul{
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: rgba(32, 30, 30, 0.653);
-    bottom: -1px
+    background-color: rgb(32, 30, 30);
+    bottom: -1px;
+    z-index: -1;
 }
 
 .controller-box{
     position: absolute;
-    top: 74%;
+    top: 30px;
     left: 50%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-    height: 200px;
+    transform: translateX(-50%);
+    width: 470px;
+    height: 250px;
     border-bottom-right-radius: 190px;
     border-bottom-left-radius: 190px;
     background-color: #fff;
     overflow: hidden;
     z-index: 95;
+    background-color: rgb(32, 30, 30);
 }
 
 .thermometr{
@@ -138,10 +143,10 @@ ul{
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 140px;
+    width: 155px;
     height: 100%;
     background-color: #312e2e;
-    box-shadow: inset -15px 9px 30px #020202bb;
+    box-shadow: inset -15px 9px 35px #020202c1;
     text-align: center;
 }
 
@@ -149,31 +154,31 @@ ul{
     font-family: serif;
     color: #ffffffcd;
     text-shadow: 0px 0px 5px rgba(84, 83, 83, 0.184);
-    font-size: 7pt;
-    margin: 12px 0 9px;
+    font-size: 9pt;
+    margin: 12px 0 10px;
 }
 
 .temperature{
-    width: 70px;
-    height: 26px;
+    width: 85px;
+    height: 30px;
     font-size: 16px;
     background-color: #141313;
     border-radius: 3px;
+    padding: 6px;
     box-shadow: 0px 0px 2px #6c6c6c, inset -2px 2px 4px #161515;
-    padding: 4px 0;
     transition: color .25s ease-in-out;
 }
 
 .thermometr-btns-wrapper{
     display: flex;
     gap: 12px;
-    margin-top: 9px;
+    margin-top: 10px;
 }
 
 .thermometr-btn-cel,
 .thermometr-btn-far{
-    width: 28px;
-    height: 18px;
+    width: 36px;
+    height: 22px;
     border-radius: 8px;
     border: none;
     background-color: #181616d3;
@@ -195,16 +200,16 @@ ul{
 .controller{
     display: flex;
     position: absolute;
-    width: 260px;
+    width: 315px;
     height: 100%;
     background-color: #e7f6f4;
-    box-shadow: inset 2px 9px 20px #020202bb, 4px -16px 36px #02020257;
+    box-shadow: inset 2px 9px 25px #020202c1, 4px -16px 36px #02020257;
     z-index: 93;
 }
 
 .controller-btns{
     display: flex;
-    width: 140px;
+    width: 150px;
     height: 100%;
     padding-left: 24px;
 }
@@ -212,14 +217,14 @@ ul{
 .middle-controller{
     display: flex;
     justify-content: center;
-    width: 120px;
+    width: 165px;
     height: 100%;
-}
+}   
 
 .circle-conroller{
     position: relative;
-    width: 106px;
-    height: 106px;
+    width: 126px;
+    height: 126px;
     border-radius: 50%;
     background-color: #312e2e;
     margin-top: 40px;
@@ -229,8 +234,8 @@ ul{
 .circle-conroller::after{
     content: '';
     position: absolute;
-    width: 106px;
-    height: 106px;
+    width: 126px;
+    height: 126px;
     border-radius: 50%;
     border: 1px solid #2c2828;
     box-shadow: inset 3px -3px 5px #262424ce, inset -3px 3px 6px rgba(105, 102, 102, 0.926), 0px 0px 2px 1px#2c2828;
@@ -243,7 +248,7 @@ ul{
     top: -20px;
     transform: translateX(-50%);
     border-radius: 5px;
-    width: 70px;
+    width: 90px;
     height: 5px;
     background-color: #353131f1;
     box-shadow: 0px 0px 6px 1px #262424ce;
@@ -252,8 +257,8 @@ ul{
 .switch{
     display: flex;
     justify-content: center;
-    padding: 5px;
-    width: 44px;
+    padding: 8px;
+    width: 54px;
     height: 60%;
     background-color: #312e2e;
     margin-top: 26px;
@@ -266,12 +271,12 @@ ul{
     display: grid;
     place-items: center;
     background-color: #312e2e;
-    width: 28px;
-    height: 28px;
+    width: 36px;
+    height: 36px;
     padding: 0;
     margin: 0;
-    border: 4px solid #312e2e;
-    border-radius: 7px;
+    border: 5px solid #312e2e;
+    border-radius: 8px;
     fill: #ffffff50;
     box-shadow: inset -2px 2px 4px rgb(26, 25, 25), inset 2px -2px 4px rgba(61, 60, 60, 0.514), -2px 2px 4px rgb(32, 32, 32);
     transition: box-shadow .15s ease-in-out, fill .15s ease-in-out;;
@@ -280,39 +285,41 @@ ul{
 .switch-btn::after{
     content: '';
     position: absolute;
-    width: 28px;
-    height: 28px;
+    width: 36px;
+    height: 36px;
     box-shadow: inset -1px 1px 1px rgb(58, 58, 58), inset 1px -1px 1px rgb(40, 39, 39);
-    border-radius: 7px;
+    border-radius: 8px;
 }
 
+
 .switch-btn-icon{
-    width: 12px;
-    height: 12px;
+    width: 16px;
+    height: 16px;
 }
 
 .events-list{
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    margin: 26px 0 0 16px;
+    gap: 12px;
+    margin: 27px 0 0 26px;
 }
 
 .events-btn{
     display: grid;
     place-items: center;
-    width: 28px;
-    height: 28px;
+    width: 34px;
+    height: 34px;
     padding: 0;
     border: none;
     background-color: #312e2e;
     border-radius: 5px;
-    box-shadow: -1px 1px 4px rgb(32, 32, 32), inset 1px -1px 3px rgb(26, 25, 25), inset -1px 1px 3px rgba(131, 130, 130, 0.666);
+    box-shadow: -2px 2px 6px rgb(32, 32, 32), inset 2px -2px 3px rgb(26, 25, 25), inset -2px 2px 3px rgba(131, 130, 130, 0.666);
 }
 
+
 .events-icon{
-    width: 12px;
-    height: 12px;
+    width: 16px;
+    height: 16px;
     opacity: 0;
     fill: #ffffff68;
     transition: opacity .25s ease-in-out, fill .25s ease-in-out;
@@ -324,49 +331,48 @@ ul{
 }
 
 [data-event="deer"] .events-icon{
-    width: 13px;
-    height: 13px;
+    width: 17px;
+    height: 17px;
 }
 
 /* Scenery */
-.scenery-wrapper {
-    position: absolute;
-    top: 27px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 50% 50% 0 0;
-    width: 400px;
-    height: 200px;
-    overflow: hidden;
-    z-index: 90;
-}
 
 .scenery-bg{
     position: absolute;
-    width: 400px;
-    height: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 28px;
+    width: 460px;    
+    height: 220px;
     background-color: #181616;
-    z-index: 99;
+    z-index: 91;
     opacity: 1;
+    border-radius: 50% 50% 0 0;
     transition: opacity .3s ease-in-out;
+    pointer-events: none;
 }
+
+.scenery-wrapper {
+    position: absolute;
+    bottom: 29px;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 50% 50% 0 0;
+    width: 460px;
+    height: 220px;
+    overflow: hidden;
+    z-index: 90;
+    background-color: #312e2e;
+}
+
 
 .scenery-mountains{
-    position: relative;
-    width: 400px;
-    height: 190px;
-    background-image: url('./imgs/mountains2.png'), url('./imgs/mountains.png');
-    background-size: 400px 190px;
-    z-index: 90;
-}
-
-.sky{
     position: absolute;
-    top: 0;
-    width: 400px;
-    height: 200px;
-    background-color:  rgb(166, 202, 212);
-    z-index: 85;
+    width: 100%;
+    height: 100%;
+    background-image: url('./imgs/mountains2.png'), url('./imgs/mountains.png');
+    background-size: 460px 220px;
+    z-index: 80;
 }
 
 .sun-moon{
@@ -379,8 +385,18 @@ ul{
     border-radius: 50%;
     background-color: #e8d67a;
     box-shadow: 0px 0px 20px #e8d67a;
-    z-index: 89;
+    z-index: 79;
 }
+
+.sky{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 99%;
+    background-color:  rgb(166, 202, 212);
+    z-index: 78;
+}
+
 
 /* Weather */
 
@@ -390,6 +406,7 @@ ul{
     height: 100%;
     transform: rotate(0);
     z-index: 100;
+    transition: transform .5s ease-in-out;
 }
 
 .weather-list{
@@ -398,15 +415,12 @@ ul{
     height: 100%;
 }
 
-.weather-item{
+.weather-btn{
     position: absolute;
     display: grid;
     place-items: center;
-    width: 20px;
-    height: 20px;
-}
-
-.weather-btn{
+    width: 30px;
+    height: 30px;
     margin: 0;
     padding: 0;
     border: none;
@@ -416,10 +430,19 @@ ul{
     transition: opacity .25s ease-in-out, fill .25s ease-in-out;
 }
 
-.weather-icon{
-    width: 15px;
-    height: 15px;
+.weather-btn:hover,
+.weather-btn:focus{
+    fill: #6beef3d5;
 }
+
+
+
+.weather-icon{
+    width: 20px;
+    height: 20px;
+    pointer-events: none;
+}
+
 
 .weather-1{
     top: 5px;
@@ -428,13 +451,13 @@ ul{
 }
 
 .weather-2{
-    top: 26px;
-    right: 10px;
+    top: 25px;
+    right: 11px;
 }
 
 .weather-3{
-    bottom: 26px;
-    right: 10px;
+    bottom: 25px;
+    right: 11px;
 }
 
 .weather-4{
@@ -444,29 +467,29 @@ ul{
 }
 
 .weather-5{
-    bottom: 26px;
+    bottom: 25px;
     left: 10px;
 }
 
 .weather-6{
-    top: 26px;
+    top: 25px;
     left: 10px;
 }
 
 #weather-icon-1{
-    width: 17px;
-    height: 17px;
+    width: 23px;
+    height: 23px;
 }
 
 #weather-icon-2{
-    width: 19px;
-    height: 19px;
+    width: 26px;
+    height: 26px;
     transform: rotate(60deg);
 }
 
 #weather-icon-3{
-    width: 14px;
-    height: 14px;
+    width: 18px;
+    height: 18px;
     transform: rotate(120deg);
 }
 
@@ -481,4 +504,3 @@ ul{
 #weather-icon-6{
     transform: rotate(300deg);
 }
-
