--- a/style.css
+++ b/style.css
@@ -313,6 +313,7 @@ ul{
     border: none;
     background-color: #312e2e;
     border-radius: 5px;
+    pointer-events: none;
     box-shadow: -2px 2px 6px rgb(32, 32, 32), inset 2px -2px 3px rgb(26, 25, 25), inset -2px 2px 3px rgba(131, 130, 130, 0.666);
 }
 
@@ -514,6 +515,7 @@ ul{
     background-color: transparent;
     fill: #ffffff5b;
     opacity: 0;
+    pointer-events: none;
     transition: opacity .25s ease-in-out, fill .25s ease-in-out;
 }
 
