--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 h1,h2,h3,h4,h5,h6,p{
     margin: 0;
     padding: 0;
@@ -340,19 +339,19 @@ ul{
     border-radius: 5px;
     pointer-events: none;
     box-shadow: -2px 2px 6px rgb(32, 32, 32), inset 2px -2px 3px rgb(26, 25, 25), inset -2px 2px 3px rgba(131, 130, 130, 0.666);
+    fill: #ffffff68;
+    transition: fill .25s ease-in-out;
 }
 
 
 .events-icon{
     width: 16px;
     height: 16px;
-    opacity: 0;
-    fill: #ffffff68;
-    transition: opacity .25s ease-in-out, fill .25s ease-in-out;
+    pointer-events: none;
 }
 
-.events-btn:hover .events-icon,
-.events-btn:focus .events-icon{
+.events-btn:hover, 
+.events-btn:focus {
     fill: #6beef3d5;
 }
 
@@ -448,6 +447,54 @@ ul{
     transform: translate(-50%, 0px);
 }
 
+.aurora{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 60%;
+    z-index: 79;
+    background: linear-gradient(15deg, rgba(64, 224, 208, 0.4) 0%, rgba(221, 140, 0, 0.612) 50%, #ff0080c2 100%);
+    background-size: cover;
+    opacity: 0;
+}
+
+.aurora-active{
+    animation: auroraEff 5s infinite;
+    opacity: 1;
+}
+
+@keyframes auroraEff {
+    0% {
+        background-position: -5px 5px;
+        opacity: 0.8;
+    }
+    12%{
+        background-position: 2px 2px;
+    }
+    25% {
+        background-position: 10px 0px;
+    }
+    37%{
+        background-position: -5px 2px;
+        opacity: 0.6;
+    }
+    50% {
+        background-position: -20px 5px;
+    }
+    62%{
+        background-position: -5px 0px;
+    }
+    75% {
+        background-position: 10px  0px;
+    }
+    87%{
+        background-position: 15px 0px;
+    }
+    100% {
+        background-position: 0px 5px;
+        opacity: 0.8;
+    }
+}
 
 .sky{
     position: absolute;
@@ -619,7 +666,9 @@ ul{
 }
 
 #weather-icon-6{
-    transform: rotate(300deg);
+    transform: rotate(302deg);
+    width: 25px;
+    height: 25px;
 }
 
 /* Events */
@@ -627,7 +676,7 @@ ul{
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 81;
+    z-index: 82;
 }
 
 .santa-sleigh{
@@ -648,12 +697,51 @@ ul{
 }
 
 .santa-flying{
-    animation: santaSleighMove 10s linear;
+    animation: santaSleighMove 7s linear;
 }
 
 .santa-flying img{
     animation: santaFlying 2s linear infinite;
     animation-delay: calc(var(--el) * 0.3s);
+}
+
+.rocket-event{
+    position: absolute;
+    width: 100%;
+    height: 68%;
+    z-index: 81;
+    overflow: hidden;
+}
+
+.rocket{
+    position: absolute;
+    left: 33%;
+    bottom: -15px;
+    width: 14px;
+}
+
+.rocket-flying{
+    animation: rocketFly 6s linear;
+}
+
+.comet-event{
+    position: absolute;
+    width: 80%;
+    height: 60%;
+    z-index: 80;
+    overflow: hidden;
+}
+
+.comet{
+    position: absolute;
+    width: var(--comet-width);
+    height: var(--comet-width);
+    left: 30%;
+    top: -10px;
+    background-color: #ffffffb6;
+    border-radius: 50%;
+    box-shadow: -1px -3px  5px rgba(255, 0, 0, 0.3);
+    animation: cometFly 2s linear;
 }
 
 @keyframes santaSleighMove {
@@ -662,7 +750,7 @@ ul{
     }
 
     100%{
-        transform: translate(500px);
+        transform: translate(400px);
     }
 }
 
@@ -693,5 +781,23 @@ ul{
     }
     100% {
         transform: translateY(0px);
+    }
+}
+
+@keyframes rocketFly {
+    0%{
+        transform: translate(0);
+    }
+    100%{
+        transform: translate(170px, -170px);
+    }
+}
+
+@keyframes cometFly {
+    0%{
+        transform: translate(var(--comet-position), 0);
+    }
+    100% {
+        transform: translate(calc(var(--comet-position) + var(--comet-position)), 130px);
     }
 }
