--- a/style.css
+++ b/style.css
@@ -560,6 +560,30 @@ ul{
     z-index: 80;
 }
 
+.snow{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 81;
+}
+
+.snow-flake{
+    position: absolute;
+    width: 5px;
+    height: 5px;
+    background-color: #fff;
+    border-radius: 50%;
+    animation:  fall linear infinite;
+}
+
+@keyframes fall {
+    0%{
+        transform: translateY(0);
+    }
+    100%{
+        transform: translateY(220px);
+    }
+}
 
 /* Weather */
 
